Modify pytest command to include '-s' option
Add '-s' option to pytest for more detailed output.

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -31,4 +31,4 @@ jobs:
       # Step 4: Run the test suite (The "Test" phase)
       - name: Run Tests with Pytest
         run: |
-          pytest
+          pytest -s
